# RemoteDisplay

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  bitmaprectanglesink.h  config.h.in  cursorchangenotifier.cpp  cursorchangenotifier.h  eventprocessor.cpp  eventprocessor.h  freerdpclient.cpp  freerdpclient.h  freerdpeventloop.cpp  freerdpeventloop.h  freerdphelpers.cpp  freerdphelpers.h  global.h  letterboxedscreenbuffer.cpp  letterboxedscreenbuffer.h  pointerchangesink.h  rdpqtsoundplugin.cpp  rdpqtsoundplugin.h  remotedisplaywidget.cpp  remotedisplaywidget.h  remotedisplaywidget_p.h  remotescreenbuffer.cpp  remotescreenbuffer.h  scaledscreenbuffer.cpp  scaledscreenbuffer.h  screenbuffer.h
